--- a/resources/js/assets/css/login100.css
+++ b/resources/js/assets/css/login100.css
@@ -2,6 +2,7 @@
     width: 100%;
     margin: 0 auto;
   }
+  
   .container-login100 {
     width: 100%;  
     min-height: 100vh;
@@ -24,6 +25,7 @@
   
   .container-login100::before {
     content: "";
+    border-radius: 15px;
     display: block;
     position: absolute;
     z-index: -1;
@@ -31,8 +33,9 @@
     height: 100%;
     top: 0;
     left: 0;
-    background: #FDB913;
+    background: linear-gradient(#333333, #1a1a20);
     opacity: 0.9;
+    box-shadow: 0px 0px 45px 0px rgb(0 0 0 / 60%);
   }
   
   .wrap-login100 {
@@ -49,11 +52,16 @@
   }
   /*---------------------------------------------*/
   .login100-form-avatar {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
+    width: 130px;
+    height: 130px;
     overflow: hidden;
     margin: 0 auto;
+    padding-top: 5px;
+    text-align: center;
+    background: #fff;
+    border-radius: 65px;
+    box-shadow: 0px 0px 45px 0px rgb(0 0 0 / 80%);
+    
   }
   .login100-form-avatar img {
     width: 100%;
@@ -70,7 +78,7 @@
     font-size: 15px;
     line-height: 1.2;
     color: #333333;
-  
+    box-shadow: 0px 0px 45px 0px rgb(0 0 0 / 80%);
     display: block;
     width: 100%;
     background: #fff;
@@ -174,20 +182,74 @@
     border-radius: 25px;
     top: 0;
     left: 0;
-    background: #FDB913;
+    box-shadow: 0px 0px 45px 0px rgb(0 0 0 / 80%);
+    background: linear-gradient(#f96332, #ff1e00);
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
     opacity: 0;
   }
-  
   .login100-form-btn:hover {
     background: transparent;
     color: #fff;
   }
   
   .login100-form-btn:hover:before {
+    opacity: 1;
+  }
+
+  .login100-form-btn-simple {
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #e0e0e0;
+    width: 200px;
+    height: 40px; 
+    background:#464646; 
+    border-radius: 4px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 25px;
+  
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  
+    position: relative;
+    z-index: 1;
+  }
+  
+  .login100-form-btn-simple::before {
+    width: 200px;
+    height: 40px; 
+    background:#f96332; 
+    border-radius: 4px;
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    box-shadow: 0px 0px 45px 0px rgb(0 0 0 / 80%);
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+    opacity: 0;
+  }
+  .login100-form-btn-simple:hover {
+    background: transparent;
+    color: #fff;
+  }
+  
+  .login100-form-btn-simple:hover:before {
     opacity: 1;
   }
   button {
