--- a/resources/js/assets/sass/black-dashboard/custom/_card.scss
+++ b/resources/js/assets/sass/black-dashboard/custom/_card.scss
@@ -1,11 +1,12 @@
 .card{
-    background: $card-black-background;
+    background: linear-gradient($vue, $vue-states);
     border: 0;
     position: relative;
     width: 100%;
     margin-bottom: 30px;
+    border-radius: 15px;
     box-shadow: $box-shadow;
-   
+
 
     label{
       color: rgba($white, 0.6);
@@ -190,10 +191,6 @@
         border-radius: 50%;
         margin-bottom: 15px;
     }
-    .banner{
-      overflow: hidden;
-      margin-bottom: 15px; 
-  }
 
     label{
         font-size: $font-size-sm;
@@ -224,55 +221,6 @@
 
 .card-body{
   padding: $card-spacer-y;
-}
-.imagecard{
-  img{
-  max-width:100%;
-  max-height:100%;
-  }
-}
-.carousel-item{
-  img{
-  max-width:100%;
-  max-height:60%;
-  }
-}
-
-.containerimg {
-  position: relative;
-  max-width:100%;
-  max-height:100%;
-}
-
-/* Make the image responsive */
-.containerimg img {
-  width: 100%;
-  height: auto;
-}
-
-/* Style the button and place it in the middle of the container/image */
-.containerimg .vercompratext {
-  position: absolute;
-  top: 90%;
-  left: 30%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-
-/* Style the button and place it in the middle of the container/image */
-.containerimg .vercomprabtn {
-  position: absolute;
-  top: 85%;
-  left: 85%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-.card-title .movelike {
-  padding-left: 35px;
-  padding-right: 0px;  
-  position: absolute;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
 }
 
 @include media-breakpoint-down(sm) {
