--- a/resources/js/assets/sass/black-dashboard/custom/_modal.scss
+++ b/resources/js/assets/sass/black-dashboard/custom/_modal.scss
@@ -111,26 +111,7 @@
     &.modal-black{
       .modal-content{
         background: linear-gradient(to bottom, $black 0%, $black-states 100%);
-        color: rgba($white, 0);
-        .modal-header{
-          .modal-title, .title{
-            color: rgba($white, 0.9);
-          }
-        }
-        .modal-body{
-          p{
-            color: rgba($white, 0.8);
-          }
-        }
-      }
-      h1, h2, h3, h4, h5, h6, p{
-        color: $white;
-      }
-    }
-    &.modal-transp{
-      .modal-content{
-        background: rgba(0,0,0,.3);
-        color: rgba($white, 0);
+        color: rgba($white, 0.8);
         .modal-header{
           .modal-title, .title{
             color: rgba($white, 0.9);
@@ -150,15 +131,15 @@
 
 .modal-search{
   .modal-dialog{
-    margin: 2px;
+    margin: 20px auto;
     max-width: 650px;
     input{
       border: none;
-      font-size: 10px;
-      font-weight: 50;
+      font-size: 17px;
+      font-weight: 100;
     }
     span{
-      font-size: 17px;
+      font-size: 35px;
       color: $search-gray;
     }
   }
