--- a/resources/js/assets/sass/black-dashboard/custom/_variables.scss
+++ b/resources/js/assets/sass/black-dashboard/custom/_variables.scss
@@ -100,24 +100,24 @@ $default-color-opacity:      rgba(182, 182, 182, .6) !default;
 $orange-color:               #f96332 !default;
 
 $default:       #344675 !default;
-$primary:       #4dba87 !default;//#ba54f5
+$primary:       #f96332 !default;
 $secondary:     #f4f5f7 !default;
 $success:       #00f2c3 !default;
 $info:          #1d8cf8 !default;
 $warning:       #ff8d72 !default;
 $danger:        #fd5d93 !default;
 $black:         #222a42 !default;
-$vue:           #27293d !default;//42b883 27293d
+$vue:           #333333 !default;
 
 // gradient
 $default-states:       #263148 !default;
-$primary-states:       #38B09D !default;// #ba54f5
+$primary-states:       #ba54f5 !default;
 $success-states:       #0098f0 !default;
 $info-states:          #3358f4 !default;
 $warning-states:       #ff6491 !default;
 $danger-states:        #ec250d !default;
 $black-states:         #1d253b !default;
-$vue-states:           #27293d !default;//389466 27293d
+$vue-states:           #1d1d23 !default;
 
 $background-black:           #1e1e2f !default;
 $background-states-black:    #1e1e24 !default;
